# PM_LAB

./: .gitignore  DEVELOPER_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  USER_GUIDE.md  config.example.toml  pyproject.toml
Docs/Implementation/: polymarket_insight_upgraded_implementation_guide.md
ingestion/: README.md  crontab.txt
notebooks/: 01_market_discovery.ipynb  02_guru_ranking.ipynb  03_trader_profile.ipynb  04_copy_delay_simulation.ipynb  05_sports_line_movement.ipynb
research/: README.md  TEMPLATE.md  example_guru_copyability.md  example_sports_line_movement.md
src/polymarket_insight/: __init__.py  cli.py  config.py  logging.py
src/polymarket_insight/analysis/: __init__.py  compare_markets.py  copy_delay.py  line_movement.py  rank_traders.py
src/polymarket_insight/ingestion/: __init__.py  health.py  leaderboard_job.py  metadata_job.py  orderbook_job.py  runner.py  universe.py
src/polymarket_insight/metrics/: __init__.py  liquidity.py  market.py  (+2 more)
tests/: conftest.py  test_cli_smoke.py  test_clients_clob.py  test_clients_data_api.py  test_clients_gamma.py  test_copy_delay.py  test_dataset_access.py  test_http_cache.py  test_hydration.py  test_ingestion_health.py  test_manifest.py  test_metrics_market.py  test_metrics_trader.py  test_no_trading_boundary.py  test_normalize_market.py  test_normalize_orderbook.py  test_normalize_trade.py  test_raw_storage.py  test_research_artifacts.py  test_research_coverage.py  test_research_sports.py  test_research_trader.py
tests/fixtures/: leaderboard_raw.json  market_raw.json  orderbook_raw.json  trade_raw.json
(+16 files in other folders)
