[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "polymarket-insight"
version = "0.1.0"
description = "Read-only Polymarket research and analytics toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Polymarket Insight" }]
dependencies = [
  "duckdb>=1.1",
  "httpx>=0.27",
  "nbformat>=5.10",
  "pandas>=2.2",
  "plotly>=5.24",
  "pyarrow>=17.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "tomli>=2.0; python_version < '3.11'",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-httpx>=0.30",
  "ruff>=0.6",
]

[project.scripts]
pmi = "polymarket_insight.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_insight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["polymarket_insight"]
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
